Handle LSA and no caseload users